// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on MARK_ACTIVITY_READ_PENDING marks the activity read 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": true,
    "path": Array [
      "Activity",
      "itemsById",
      "2",
      "unread",
    ],
    "rhs": false,
  },
]
`;

exports[`on MARK_ALL_ACTIVITIES_READ_PENDING marks the activity read 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": true,
    "path": Array [
      "Activity",
      "itemsById",
      "1",
      "unread",
    ],
    "rhs": false,
  },
  DiffEdit {
    "kind": "E",
    "lhs": true,
    "path": Array [
      "Activity",
      "itemsById",
      "2",
      "unread",
    ],
    "rhs": false,
  },
]
`;

exports[`on TOGGLE_TOPIC_SUBSCRIBE will increment the communityTopic followersTotal appropriately 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": 10,
    "path": Array [
      "CommunityTopic",
      "itemsById",
      "1",
      "followersTotal",
    ],
    "rhs": 11,
  },
]
`;

exports[`on TOGGLE_TOPIC_SUBSCRIBE will remove an existing topic subscription and decrement the followersTotal 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": 10,
    "path": Array [
      "CommunityTopic",
      "itemsById",
      "1",
      "followersTotal",
    ],
    "rhs": 9,
  },
  DiffArray {
    "index": 0,
    "item": DiffDeleted {
      "kind": "D",
      "lhs": "3",
    },
    "kind": "A",
    "path": Array [
      "TopicSubscription",
      "items",
    ],
  },
  DiffDeleted {
    "kind": "D",
    "lhs": Object {
      "id": "3",
    },
    "path": Array [
      "TopicSubscription",
      "itemsById",
      "3",
    ],
  },
]
`;

exports[`on VOTE_ON_POST_PENDING when myVote is false increments votesTotal and updates myVote if isUpvote is true 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": 7,
    "path": Array [
      "Post",
      "itemsById",
      "1",
      "votesTotal",
    ],
    "rhs": 8,
  },
  DiffEdit {
    "kind": "E",
    "lhs": false,
    "path": Array [
      "Post",
      "itemsById",
      "1",
      "myVote",
    ],
    "rhs": true,
  },
]
`;

exports[`on VOTE_ON_POST_PENDING when myVote is true decrements votesTotal and updates myVote if isUpvote is false 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": 4,
    "path": Array [
      "Post",
      "itemsById",
      "2",
      "votesTotal",
    ],
    "rhs": 3,
  },
  DiffEdit {
    "kind": "E",
    "lhs": true,
    "path": Array [
      "Post",
      "itemsById",
      "2",
      "myVote",
    ],
    "rhs": false,
  },
]
`;
